# student-admission-counselling

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.sqlite.yaml  compose.yaml  dev.env  manage.py  meson.build  meson.options  requirements.txt
counselling/: admin.py  models.py  tasks.py  urls.py  views.py
counselling/management/commands/: generate_users.py  seed.py  start_celery_worker.py
counselling/migrations/: 0002_student_registration_date.py  0004_alter_college_website.py  0005_college_college_type.py  0007_college_slug.py  0009_program_counselling_college_4aef51_idx_and_more.py  0010_sitepreference.py  0011_student_last_choice_save_date.py  0012_student_choice_report_path.py  0013_alter_college_slug.py  0014_round_allotment.py  0015_student_last_choice_report_generation_date.py  0016_remove_choiceentry_student_program_unique_and_more.py  0017_student_choice_entry_add_new_programs_allowed_and_more.py  0018_alter_student_date_of_birth.py  0019_alter_student_choice_report_path.py  0020_alter_student_choice_report_path.py
counselling/static/counselling/: styles.css
counselling/templates/counselling/: actions_view.html  choice_entry.html  choice_entry_closed.html  college_detail.html  college_list.html  download_choice_report.html  index.html  (+1 more)
counselling/tests/: test_models.py  test_tasks.py  test_views.py
dataset/: KCET_COLLEGE_LIST.csv  KCET_COURSES_LIST.csv  KCET_PROGRAMS_LIST.csv  README.md  data.json  data_gen.py
matcher/: da-algorithm.hpp  main.cpp  meson.build
matcher/tests/: meson.build  test_da_algorithm.cpp
pymatcher-src/: Dockerfile  meson.build  pyproject.toml
scm_site/: .gitignore  Dockerfile  manage.py  requirements.txt  settings.py  urls.py
scm_site/counselling/: admin.py  models.py  reports.py  tasks.py  urls.py  views.py
scm_site/scm_site/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
scm_site/student_matcher/: apps.py  views.py
scm_site/templates/: base_generic.html
src/: example.py  meson.build
src/matcher/: da-algorithm.cpp  da-algorithm.hpp  da_algorithm.cpp  da_algorithm.hpp  main.cpp  meson.build
src/matcher/tests/: meson.build  test_da_algorithm.cpp
src/pymatcher/: da_algorithm.pxd  meson.build  pymatcher.pyx
static/: styles.css
templates/registration/: login.html
(+28 files in other folders)
